# Algoritmos

./: .gitignore  README.md  plantillas.txt
Intro/: SumarParesImpares.cpp  SumarPrimerosNumeros.cpp  palindromo  paresimpares  primeros  sumar
T1ConstruccionSoftware/: CMakeCache.txt  Makefile  Matriz.cpp  Matriz.h  Palindromo.cpp  main.cpp  matriz
T1ConstruccionSoftware/Matriz/: Matriz.cpp  Matriz.h  Testmain.cpp
T2AlgNoRecursivos/: CMakeLists.txt  Matriz.cpp  Matriz.h  burbuja.cpp  burbuja.h  insercion.cpp  insercion.h  main.cpp  seleccion.cpp  seleccion.h
T2AlgNoRecursivos/Burbuja/: burbuja.cpp  burbuja.h
T2AlgNoRecursivos/Insercion/: insercion.cpp  insercion.h
T2AlgNoRecursivos/Seleccion/: seleccion.cpp
T3AlgRecursivos/: CMakeCache.txt  CMakeLists.txt  Combinaciones.cpp  Combinaciones.h  Makefile  Matriz.cpp  Matriz.h  Palindromo.cpp  Palindromo.h  RaizCuadrada.cpp  RaizCuadrada.h  combinaciones  main.cpp  palindromo
T3AlgRecursivos/Combinaciones/: Combinaciones.cpp
T3AlgRecursivos/Palindromo/: Palindromo.cpp
T3AlgRecursivos/RaizCuadrada/: RaizCuadrada.cpp
T4DivideyVencerasYDinamica/: combinaciones.cpp  combinacionesDinamica.cpp  combinacionesDinamica.h  mergesort.cpp  mergesort.h
T4DivideyVencerasYDinamica/CombinacionesDinamica/: combinacionesDinamica.h
T5BacktrackingYVoraz/: devolverCambio.cpp  devolverCambio.h  laberinto.cpp  laberinto.h
T6ListaContiguaYEnlazada/: ListaContigua.cpp  ListaContigua.h  ListaEnlazada.cpp  ListaEnlazada.h  mainContigua.cpp  mainEnlazada.cpp
concurso/: EurocopaAmanada.cpp  FormasSumarN.cpp
(+52 files in other folders)
